--- a/index.html
+++ b/index.html
@@ -5,66 +5,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script href="./script.js"></script>
-    <title> Maria's portfolio</title>
+    <title>Maria's portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="contact">
-        <main>
-            <h1> María Frausto Sánchez</h1>
-            <h2>Full-Stack developer</h2>
-            <p><b>mfrausto.fs@gmail.com</b>
-            <p>
-    </div>
-    <div class="aboutme">
-        <h3>Acerca de mí</h3>
-        <p> Soy una persona interesada en desarrollar soluciones de software implementando tecnologías como Java,
-            JavaScript, HTML, CSS, así como servicios de bases de datos tales como MySQL y PostgreSQL. Me gusta aprender cosas nuevas de manera continua.</p>
-    </div>
-    <h3> Skills </h3>
-    <p>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</lo>
-        <li>JavaScript</li>
-        <li>SQL con MySQL y PostgreSQL</li>
-        <li>Java</li>
-        <li>C / C++</li>
-        <li> Bootstrap</li>
-        <li>Rápido aprendizaje</li>
-    </ul>
-    </p>
+    <header>
+        <div class="container">
+            <img src="./assets/img/IMG_0084.jpg" alt="Foto de María" width="100px" height="auto">
+            <div>
+                <h1>María Frausto Sánchez</h1>
+                <h2>Full-Stack developer</h2>
+                <p><b>Email:</b> mfrausto.fs@gmail.com</p>
+            </div>
+    </header>
 
-    <div class="Educación">
-        <h3>Educación</h3>
-        <p>
-            Ingeniería de Software 4to Semestre. Universidad Autónoma de Sinaloa.
-            2021- Actualmente
-        </p>
-        <P>Lic. en Enseñanza del idioma Inglés. Titulada.</p>
-    </div>
+    <main>
+        <div class="container">
+            <section id="acercademi">
+                <h2>Acerca de mí</h2>
+                <p>Soy una persona interesada en desarrollar soluciones de software implementando tecnologías como Java, JavaScript, HTML, CSS, así como servicios de bases de datos tales como MySQL y PostgreSQL. Me gusta aprender cosas nuevas de manera continua.</p>
+            </section>
 
-    <div class="Proyectos">
-        <h3>Proyectos</h3>
-        <p>
-        <ul>
-            <li><b>Portfolio Website. </b>
-                Utilicé HTML, hojas de estilo CSS, Bootstrap y JavaScript.
-            </li>
-            <li><b>To-do list App con JavaScript. </b>
-                Cree una aplicación que guarda una lista de tareas y se pueden marcar como completadas. Se organizan por
-                pendientes y completadas.
-            </li>
-            <li><b>Pomodoro App con Java</b>
-                Cree una aplicación de gestión de tiempo para productividad con Java que puede poner temporizadores.
-            </li>
+            <section>
+                <h2>Skills</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>SQL con MySQL y PostgreSQL</li>
+                    <li>Java</li>
+                    <li>C / C++</li>
+                    <li>Bootstrap</li>
+                    <li>Metodología SCRUM</li>
+                    <li>Rápido aprendizaje</li>
+                </ul>
+            </section>
 
-        </ul>
-        </p>
-    </div>
+            <section>
+                <h2>Educación</h2>
+                <p>Ingeniería de Software - 4to Semestre. Universidad Autónoma de Sinaloa. 2021 - Actualmente</p>
+                <p>Licenciatura en Enseñanza del Idioma Inglés. Titulada.</p>
+            </section>
+
+            <section>
+                <h2>Proyectos</h2>
+                <ul>
+                    <li><b>Portfolio Website:</b> Utilicé HTML, CSS, Bootstrap y JavaScript.</li>
+                    <li><b>To-do list App con JavaScript:</b> Creé una aplicación que guarda una lista de tareas y se pueden marcar como completadas.</li>
+                    <li><b>Pomodoro App con Java:</b> Creé una aplicación de gestión de tiempo para productividad con Java que puede poner temporizadores.</li>
+                </ul>
+            </section>
+        </div>
     </main>
 
+    <script src="./script.js"></script>
 </body>
 
 </html>
