--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Maria's portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <img src="./assets/img/IMG_0084.jpg" alt="Foto de María" width="100px" height="auto">
+            <img id="img" src="./assets/img/IMG_0084.jpg" alt="Foto de María" width="100px" height="auto">
             <div>
                 <h1>María Frausto Sánchez</h1>
                 <h2>Full-Stack developer</h2>
@@ -24,10 +25,30 @@
         <div class="container">
             <section id="acercademi">
                 <h2>Acerca de mí</h2>
-                <p>Soy una persona interesada en desarrollar soluciones de software implementando tecnologías como Java, JavaScript, HTML, CSS, así como servicios de bases de datos tales como MySQL y PostgreSQL. Me gusta aprender cosas nuevas de manera continua.</p>
+                <p>Soy una persona interesada en desarrollar soluciones de software implementando tecnologías como Java,
+                    JavaScript, HTML, CSS, así como servicios de bases de datos tales como MySQL y PostgreSQL. Me gusta
+                    aprender cosas nuevas de manera continua.</p>
+            </section>
+            <section class=" proyectos">
+                <h2>Proyectos</h2>
+                <ul>
+                    <li><b>Portfolio Website:</b> Utilicé HTML, CSS, Bootstrap y JavaScript.</li>
+                    <li><b>To-do list App con JavaScript:</b> Creé una aplicación que guarda una lista de tareas y se
+                        pueden marcar como
+                        completadas.</li>
+                    <li><b>Pomodoro App con Java:</b> Creé una aplicación de gestión de tiempo para productividad con
+                        Java que puede poner
+                        temporizadores.</li>
+                </ul>
+            </section>
+            <section class="educacion">
+            <h2>Educación</h2>
+            <p><b>Ingeniería de Software - 4to Semestre.</b> Universidad Autónoma de Sinaloa. 2021 - Actualmente</p>
+            <br>
+            <p><b>Licenciatura en Enseñanza del Idioma Inglés.</b> Titulada.</p>
             </section>
 
-            <section>
+            <section class="skills">
                 <h2>Skills</h2>
                 <ul>
                     <li>HTML</li>
@@ -39,21 +60,6 @@
                     <li>Bootstrap</li>
                     <li>Metodología SCRUM</li>
                     <li>Rápido aprendizaje</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>Educación</h2>
-                <p>Ingeniería de Software - 4to Semestre. Universidad Autónoma de Sinaloa. 2021 - Actualmente</p>
-                <p>Licenciatura en Enseñanza del Idioma Inglés. Titulada.</p>
-            </section>
-
-            <section>
-                <h2>Proyectos</h2>
-                <ul>
-                    <li><b>Portfolio Website:</b> Utilicé HTML, CSS, Bootstrap y JavaScript.</li>
-                    <li><b>To-do list App con JavaScript:</b> Creé una aplicación que guarda una lista de tareas y se pueden marcar como completadas.</li>
-                    <li><b>Pomodoro App con Java:</b> Creé una aplicación de gestión de tiempo para productividad con Java que puede poner temporizadores.</li>
                 </ul>
             </section>
         </div>
