Adicion del proyecto de agenda java con POO y CRUD

--- a/index.html
+++ b/index.html
@@ -13,30 +13,28 @@
 <body>
     <header>
         <section class="img">
-        <div class="container">
-        <img id="img" src="./assets/img/IMG_0084.jpg" alt="Foto de María" 
-        width="100px" height="auto">
-        </div>
+            <div class="container">
+                <img id="img" src="./assets/img/IMG_0084.jpg" alt="Foto de María" width="100px" height="auto">
+            </div>
 
-    </section>
-    <br>
-    <section>
+        </section>
+        <br>
+        <section>
             <div class="container">
                 <h1>María Frausto Sánchez</h1>
                 <br>
                 <h2>Full-Stack developer</h2>
                 <p><b>Email:</b> mfrausto.fs@gmail.com</p>
             </div>
-            </section>
+        </section>
     </header>
 
     <main>
         <div class="container">
             <section id="acercademi">
                 <h2>Acerca de mí</h2>
-                <p>Soy una persona interesada en desarrollar soluciones de software implementando tecnologías como Java,
-                    JavaScript, HTML, CSS, así como servicios de bases de datos tales como MySQL y PostgreSQL. Me gusta
-                    aprender cosas nuevas de manera continua.</p>
+                <p> Soy estudiante de Ingeniería de Software cursando cuarto semestre, interesada en el desarrollo de software y comprometida con mi crecimiento profesional y aprendizaje continuo. </p>
+
             </section>
             <section id="proyectos" class="proyectos">
                 <h2>Proyectos</h2>
@@ -53,6 +51,13 @@
                     <img src="./assets/img/tecnica-pomodoro.png" alt="Proyecto 3">
                     <p><b>Pomodoro App con Java:</b> Creé una aplicación de gestión de tiempo para productividad con
                         Java que puede poner temporizadores.</p>
+                </div>
+                <div>
+                    <img src="./assets/img/agenda.png" alt="Proyecto 4">
+                    <p><b>Agenda telefónica App Desktop</b> Cree una aplicación Java con un CRUD para registro de
+                        números telefónicos guardandolos en una base de datos en PostgreSQL.
+                    </p>
+
                 </div>
             </section>
             <section id="educacion" class="educacion">
