--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
         <section class="img">
             <div class="container">
                 <img id="img" src="./assets/img/IMG_0084.jpg" alt="Foto de María" width="100px" height="auto">
-            </div>
 
-        </section>
-        <br>
-        <section>
-            <div class="container">
                 <h1>María Frausto Sánchez</h1>
                 <br>
-                <h2>Full-Stack developer</h2>
+            </div>
+            <div id="info" class="container">
+                <p><b>Full-Stack developer</b></p>
+            </div>
+            <div id="email">
                 <p><b>Email:</b> mfrausto.fs@gmail.com</p>
             </div>
         </section>
@@ -33,7 +32,8 @@
         <div class="container">
             <section id="acercademi">
                 <h2>Acerca de mí</h2>
-                <p> Soy estudiante de Ingeniería de Software cursando cuarto semestre, interesada en el desarrollo de software y comprometida con mi crecimiento profesional y aprendizaje continuo. </p>
+                <p> Soy estudiante de Ingeniería de Software cursando cuarto semestre, interesada en el desarrollo de
+                    software y comprometida con mi crecimiento profesional y aprendizaje continuo. </p>
 
             </section>
             <section id="proyectos" class="proyectos">
