to-do app functions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <br>
             </div>
             <div id="info" class="container">
-                <p><b>Full-Stack developer</b></p>
+                <p><b>Full-Stack developer Jr</b></p>
             </div>
             <div id="email">
                 <p><b>Email:</b> mfrausto.fs@gmail.com</p>
